--- a/index.html
+++ b/index.html
@@ -7,7 +7,21 @@
     <title>G3 Architects</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        <nav>
+            <div class="header-container">
+                <h3 class="nav-title">
+                    G3 Architects
+                </h3>
+                <ul class="nav-list">
+                    <li><a href="">Home</a></li>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Contact Us</a></li>
+                    <li><a href="">Login</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
     <main></main>
     <footer></footer>
 </body>
