Banner section added

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <!-- Nav Section -->
         <nav>
             <div class="header-container">
                 <h3 class="nav-title">
@@ -21,6 +22,21 @@
                 </ul>
             </div>
         </nav>
+        <!-- Banner section -->
+        <article>
+            <h1 class="banner-title">
+                Brand New <br>Group of Architects
+            </h1>
+            <p class="banner-p">
+                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in <br> some form, by injected humour, or randomised words which don't look even
+            </p>
+            <button class="btn">
+                Explore More
+            </button>
+            <div class="banner-pic">
+                <img class="banner-img" src="./images/banner.png" alt="Group Photo">
+            </div>
+        </article>
     </header>
     <main></main>
     <footer></footer>
