Updated Design for Nav Bar & Banner Section

--- a/index.html
+++ b/index.html
@@ -15,28 +15,31 @@
                     G3 Architects
                 </h3>
                 <ul class="nav-list">
-                    <li><a href="">Home</a></li>
-                    <li><a href="">About</a></li>
-                    <li><a href="">Contact Us</a></li>
-                    <li><a href="">Login</a></li>
+                    <li class="li"><a href="">Home</a></li>
+                    <li class="li"><a href="">About</a></li>
+                    <li class="li"><a href="">Contact Us</a></li>
+                    <li class="li"><a href="">Login</a></li>
                 </ul>
             </div>
         </nav>
         <!-- Banner section -->
-        <article>
+       <section>
+        <div class="banner-container">
             <h1 class="banner-title">
                 Brand New <br>Group of Architects
             </h1>
             <p class="banner-p">
-                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in <br> some form, by injected humour, or randomised words which don't look even
+                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in
+                some form, by injected humour, or randomised words which don't look even
             </p>
             <button class="btn">
                 Explore More
             </button>
-            <div class="banner-pic">
-                <img class="banner-img" src="./images/banner.png" alt="Group Photo">
-            </div>
-        </article>
+        </div>
+        <div class="banner-pic">
+            <img class="banner-img" src="./images/banner.png" alt="Group Photo">
+        </div>
+       </section>
     </header>
     <main></main>
     <footer></footer>
