--- a/index.html
+++ b/index.html
@@ -41,7 +41,31 @@
         </div>
        </section>
     </header>
-    <main></main>
+    <main>
+        <!-- Team Styles -->
+       <section>
+            <div class="team-container">
+                <div class="team-img">
+                    <img src="./images/team1.png" alt="">
+                    <img src="./images/team2.png" alt="">
+                    <img src="./images/team3.png" alt="">
+                    <img src="./images/team4.png" alt="">
+                </div>
+                <div class="team-text">
+                    <h3 class="team-title">
+                        Quick list <span class="team-title-middle">of Our</span> <br> <span class="team-title-last">Features</span>
+                    </h3>
+                    <p class="team-p">
+                        There are many variations of passages of Lorem Ipsum available, <br> but the majority have suffered alteration in some form,
+                        by injected <br> humour, or randomised words which don't look even
+                    </p>
+                    <button class="btn, btn2">
+                        Explore More
+                    </button>
+                </div>
+            </div>
+       </section>
+    </main>
     <footer></footer>
 </body>
 </html>
