--- a/index.html
+++ b/index.html
@@ -65,6 +65,49 @@
                 </div>
             </div>
        </section>
+       <!-- Feature Section -->
+       <section class="feature">
+        <div class="feature-container">
+            <h2 class="feature-title">
+                Features you will <br> love & enjoy
+            </h2>
+            <p class="feature-p">
+                There are many variations of passages of Lorem Ipsum available, but the <br> majority have suffered alteration in some form,
+                by injected humour, or <br> randomised words which don't look even
+            </p>
+            <div class="card">
+                <h3 class="card-title">Dexktop & Mobile Version</h3>
+                <p class="card-p">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form,
+                by injected humour, or randomised...........</p>
+            </div>
+            <div class="card">
+                <h3 class="card-title">Drag & Drop Builder</h3>
+                <p class="card-p">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form,
+                by injected humour, or randomised...........</p>
+            </div>
+            <div class="card">
+                <h3 class="card-title">Awesome Modern Design</h3>
+                <p class="card-p">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form,
+                by injected humour, or randomised...........</p>
+            </div>
+            <div class="card">
+                <h3 class="card-title">Super Easy to Edit</h3>
+                <p class="card-p">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form,
+                by injected humour, or randomised...........</p>
+            </div>
+        </div>
+        <div>
+            <div class="feature-img">
+                <img src="./images/architect.png" alt="">
+            </div>
+            <div class="exp">
+                <h2>
+                    10+Year
+                </h2>
+                <p>Experience</p>
+            </div>
+        </div>
+       </section>
     </main>
     <footer></footer>
 </body>
