--- a/index.html
+++ b/index.html
@@ -75,25 +75,31 @@
                 There are many variations of passages of Lorem Ipsum available, but the <br> majority have suffered alteration in some form,
                 by injected humour, or <br> randomised words which don't look even
             </p>
-            <div class="card">
-                <h3 class="card-title">Dexktop & Mobile Version</h3>
-                <p class="card-p">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form,
-                by injected humour, or randomised...........</p>
-            </div>
-            <div class="card">
-                <h3 class="card-title">Drag & Drop Builder</h3>
-                <p class="card-p">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form,
-                by injected humour, or randomised...........</p>
-            </div>
-            <div class="card">
-                <h3 class="card-title">Awesome Modern Design</h3>
-                <p class="card-p">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form,
-                by injected humour, or randomised...........</p>
-            </div>
-            <div class="card">
-                <h3 class="card-title">Super Easy to Edit</h3>
-                <p class="card-p">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form,
-                by injected humour, or randomised...........</p>
+            <div class="card-container">
+                <div class="card">
+                    <h3 class="card-title">Dexktop & Mobile Version</h3>
+                    <p class="card-p">There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form,
+                        by injected humour, or randomised...........</p>
+                </div>
+                <div class="card">
+                    <h3 class="card-title">Drag & Drop Builder</h3>
+                    <p class="card-p">There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form,
+                        by injected humour, or randomised...........</p>
+                </div>
+                <div class="card">
+                    <h3 class="card-title">Awesome Modern Design</h3>
+                    <p class="card-p">There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form,
+                        by injected humour, or randomised...........</p>
+                </div>
+                <div class="card">
+                    <h3 class="card-title">Super Easy to Edit</h3>
+                    <p class="card-p">There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form,
+                        by injected humour, or randomised...........</p>
+                </div>
             </div>
         </div>
         <div>
