--- a/index.html
+++ b/index.html
@@ -114,6 +114,39 @@
             </div>
         </div>
        </section>
+        <!-- Facts Section -->
+        <section>
+            <div class="facts-container">
+                <h3 class="feature-title">
+                    Some Facts
+                </h3>
+                <p class="feature-p">
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.
+                </p>
+                <div class="facts-card-container">
+                    <div class="facts-card">
+                        <img src="./images/icons/ribon.png" alt="">
+                        <h3>54</h3>
+                        <p>Awards Winnings</p>
+                    </div>
+                    <div class="facts-card">
+                        <img src="./images/icons/projects.png" alt="">
+                        <h3>1458</h3>
+                        <p>Project Finished</p>
+                    </div>
+                    <div class="facts-card">
+                        <img src="./images/icons/customers.png" alt="">
+                        <h3>590</h3>
+                        <p>Clients Worked</p>
+                    </div>
+                    <div class="facts-card">
+                        <img src="./images/icons/email.png" alt="">
+                        <h3>22578</h3>
+                        <p>Email Send</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer></footer>
 </body>
