--- a/index.html
+++ b/index.html
@@ -160,6 +160,10 @@
             </div>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <p class="footer-p">
+            All rights reserved copyright@2023 startup landing page design
+        </p>
+    </footer>
 </body>
 </html>
