--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     </h3>
                     <p class="team-p">
                         There are many variations of passages of Lorem Ipsum available, <br> but the majority have suffered alteration in some form,
-                        by injected <br> humour, or randomised words which don't look even
+                        by injected <br> humour, or randomized words which don't look even
                     </p>
                     <button class="btn, btn2">
                         Explore More
@@ -73,32 +73,32 @@
             </h2>
             <p class="feature-p">
                 There are many variations of passages of Lorem Ipsum available, but the <br> majority have suffered alteration in some form,
-                by injected humour, or <br> randomised words which don't look even
+                by injected humour, or <br> randomized words which don't look even
             </p>
             <div class="card-container">
                 <div class="card">
-                    <h3 class="card-title">Dexktop & Mobile Version</h3>
+                    <h3 class="card-title">Desktop & Mobile Version</h3>
                     <p class="card-p">There are many variations of passages of Lorem Ipsum available, but the majority have suffered
                         alteration in some form,
-                        by injected humour, or randomised...........</p>
+                        by injected humour, or randomized...........</p>
                 </div>
                 <div class="card">
                     <h3 class="card-title">Drag & Drop Builder</h3>
                     <p class="card-p">There are many variations of passages of Lorem Ipsum available, but the majority have suffered
                         alteration in some form,
-                        by injected humour, or randomised...........</p>
+                        by injected humour, or randomized...........</p>
                 </div>
                 <div class="card">
                     <h3 class="card-title">Awesome Modern Design</h3>
                     <p class="card-p">There are many variations of passages of Lorem Ipsum available, but the majority have suffered
                         alteration in some form,
-                        by injected humour, or randomised...........</p>
+                        by injected humour, or randomized...........</p>
                 </div>
                 <div class="card">
                     <h3 class="card-title">Super Easy to Edit</h3>
                     <p class="card-p">There are many variations of passages of Lorem Ipsum available, but the majority have suffered
                         alteration in some form,
-                        by injected humour, or randomised...........</p>
+                        by injected humour, or randomized...........</p>
                 </div>
             </div>
         </div>
